--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ serde_json = "1.0"
 libsecp256k1 = { version = "0.3.5", default-features = false, features = ["std", "hmac"] }
 wagyu-model = { git = "https://github.com/jakinyele/wagyu" }
 wagyu-bitcoin = { git = "https://github.com/jakinyele/wagyu" }
+wagyu-zcash = { git = "https://github.com/jakinyele/wagyu" }
