--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,6 @@ serde_derive = "1.0"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0"
 libsecp256k1 = { version = "0.3.5", default-features = false, features = ["std", "hmac"] }
-wagyu-model = { git = "https://github.com/jakinyele/wagyu" }
-wagyu-bitcoin = { git = "https://github.com/jakinyele/wagyu" }
-#wagyu-zcash = { git = "https://github.com/jakinyele/wagyu" }
+wagyu-model = { git = "https://github.com/AleoHQ/wagyu" }
+wagyu-bitcoin = { git = "https://github.com/AleoHQ/wagyu" }
+#wagyu-zcash = { git = "https://github.com/AleoHQ/wagyu" }
